--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,7 @@ body::-webkit-scrollbar {
 /* hide Scroll bar from firefox */
 html {
   scrollbar-width: none;
+  overflow-x: hidden;
 }
 
 body {
